# ship_routing

./: .gitignore  ARCHITECTURE.md  LICENCE  README.md  benchmark_multiprocessing.py  benchmark_multithreading.py  benchmark_parallelism.py  pixi.toml  pyproject.toml  requirements-dev.txt  setup_pixi_hpc.sh
benchmark/: benchmark_parallelism.py  benchmark_parallelism_results.csv  benchmark_parallelism_summary.csv
data/: README.md
data/test/: README.md
debug/: debug_crossover.py
dev/profiling/: profile_leg_cost.py
doc/examples/: Untitled.ipynb  data  example_optimisation.ipynb  example_routing.py  example_routing_analysis.ipynb  genetic_optimisation.ipynb  hyperparameter_search.ipynb  poc_gnetic.ipynb  ship_routing_example.ipynb  ship_routing_example_case_01.ipynb  ship_routing_example_genetic.ipynb  ship_routing_example_genetic_multiproc.ipynb  simple_optimisation.ipynb
notes/: DEV.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md
scripts/: download_data.sh
tests/: conftest.py  test_algorihms.py  test_core.py  test_cost.py  test_cost_ufuncs.py  test_currents.py  test_data.py  test_geodesics.py  test_mc.py  test_remix.py  test_traj.py
tuning/: 01_hyperparameter_tuning_loading.ipynb  02_hyperparameter_tuning_analysis.ipynb  03_hyperparameter_tuning_overview_maps_forcing.ipynb  04_hyperparameter_tuning_show_elites.ipynb  extract_redis_results.py  hyperparameter_tuning.ipynb  load_redis_results.py  load_tuning_results.py  run_experiment.job  run_experiment.py  run_experiment.results.tar.zst  run_experiment_testing.job  start_exp.sh
(+95 files in other folders)
